# sugarcube_bazel

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  defs.bzl  make_inner_data.sh  make_story.sh  scp_to_html.sh  split_format_file.sh
examples/the_mall/: BUILD.bazel  MODULE.bazel  user_script.html  user_stylesheet.html
examples/the_mall/passages/: BUILD.bazel  locations.scp  media_coding.scp  start.scp  stats.scp  story_author.scp  story_caption.scp  story_init.scp  story_menu.scp  story_subtitle.scp
examples/the_mall/passages/home/: BUILD.bazel  home.scp
examples/the_mall/passages/mall/: BUILD.bazel  mall.scp
formats/sugarcube-2.37.3/: BUILD.bazel
scripts/: BUILD.bazel  extract_passage.sh
