load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "scp_to_html",
    srcs = [
        "scp_to_html.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "split_format_file",
    srcs = [
        "split_format_file.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "make_story",
    srcs = [
        "make_story.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "make_inner_data",
    srcs = [
        "make_inner_data.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "extract_passage",
    srcs = [
        "extract_passage.sh",
    ],
    visibility = ["//visibility:public"],
)
