module(name = "the_mall_project")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# sugarcube_bazel
git_repository(
    name = "sugarcube_bazel",
    branch = "main",
    remote = "https://github.com/somebody-else-sg/sugarcube_bazel.git",
)